Estilo global ok

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Podemon Api</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
@@ -32,7 +32,7 @@
             
             <button class="btn-search">Buscar</button>
         </form>
-    </header>
+    </header><!--Fin header-->
 
     <div class="container-filter container">
         <div class="icon-filter">
@@ -52,7 +52,7 @@
               </svg>              
             <span>Filtrar</span>
         </div>
-    </div>
+    </div><!--Fin filter container-->
 
     <main class="card-list-pokemon container">
         <a href="pokemon.html" class="card-pokemon">
@@ -74,7 +74,7 @@
                     src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/002.png" 
                     alt="Pokemon Ivysaur" 
                 />
-            </div>
+            </div><!--Fin card img-->
             <div class="card-info">
                 <span class="pokemon-id">N° 2</span>
                 <h3>Ivysaur</h3>
@@ -247,10 +247,9 @@
                 </div>
             </div>
         </a>
+    </main><!--Fin card-list-pokemon-->
 
-    </main>
-
-    <div class="container-filters">
+    <div class="container-filters active">
         <div class="filters-by-type">
             <span>Tipo</span>
 
