--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         </a>
     </main><!--Fin card-list-pokemon-->
 
-    <div class="container-filters active">
+    <div class="container-filters">
         <div class="filters-by-type">
             <span>Tipo</span>
 
@@ -327,6 +327,6 @@
             </div>
         </div>
     </div>
-
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
